--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -64,7 +64,7 @@
 <div *ngIf="!infoMessage">
     <div class="mat-h4" style="text-align: center;">Help</div>
     <hr>
-    <div class="mat-h3" style="text-align: center;color: #004684;">Touch or click a name to edit or add rationales.
+    <div class="mat-h3" style="text-align: center;color: #004684;">Touch or click a name to edit or delete
     </div>
 
     <div fxLayoutAlign="end end">
