emojibox max height removed

--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -63,7 +63,7 @@
             font-size: 14px;
             line-height: 19px;
             overflow-y: scroll;
-            max-width: 373px;
+            // max-width: 373px;
 
     }
     .emoji-mobile-box::-webkit-scrollbar {
