--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -128,7 +128,7 @@
 
 .search-results::-webkit-scrollbar {
   display: none;
-} 
+}
 
 .search-results {
   background-color: indigo;
@@ -390,7 +390,6 @@ mat-slider {
   overflow-y: hidden;
 }
 
-
 .shrinkCard {
   width: 300px;
   margin: 5px;
@@ -538,19 +537,25 @@ mat-slider {
 table {
   width: 100%;
 }
- 
+
 .post-it-done-button {
   color: white;
-    position: absolute;
-    top: 593px;
-    background-color: green;
-    padding: 4px;
-    outline: none;
-    left: 970px;
-    // z-index: 999;
+  position: absolute;
+  top: 593px;
+  background-color: green;
+  padding: 4px;
+  outline: none;
+  left: 970px;
+  // z-index: 999;
 }
+.tabs-emojis{
+  overflow-y: scroll;max-height: 600px;
+}
+  .tabs-emojis::-webkit-scrollbar {
+    display: none;
+  }
 
-.emoji-box{
+.emoji-box {
   background-color: white;
   position: fixed;
   background-origin: padding-box;
@@ -561,7 +566,7 @@ table {
   border-radius: 10px;
   padding-left: 10px;
   border: solid lightgrey;
-  overflow-y: scroll;
+  overflow-y: hidden;
   width: 741px;
   z-index: 99999;
   animation: jackInTheBox; /* referring directly to the animation's @keyframe declaration */
@@ -569,8 +574,19 @@ table {
 }
 
 
+mat-tab-group ::-webkit-scrollbar {
+  display: none;
+}
+
 .emoji-box::-webkit-scrollbar {
-  display: block;
+  display: none;
+}
+
+.cancel-emoji {
+  position: relative;
+  left: 687px;
+  top: 20px;
+  cursor: pointer;
 }
 
 $postItanimations: wobble, wobble, wobble, wobble, wobble, wobble, wobble, wobble, wobble, wobble, wobble, wobble;
