--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -522,16 +522,17 @@ mat-slider {
 
 .mat-dialog-container {
   display: block;
-  padding: 24px;
+  padding: 46px 20px 110px 26px;
   border-radius: 4px;
   box-sizing: border-box;
   overflow: auto;
   outline: 0;
   width: 100%;
   height: 100%;
-  background-color: red !important;
   min-height: inherit;
   max-height: inherit;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
 }
 
 table {
