--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -20,7 +20,7 @@
                     <div id="login-form">
 
 
-                        <img class="logo" src="assets/img/NAMEPAGE_LOGO-01.svg">
+                        <img class="logo" src="./assets/img/NAMEPAGE_LOGO-01.svg">
                         <br>
                         <div class="title secondary-text">Welcome to the NamePage<sup style="font-size: 10px;">TM</sup>
                             for Project </div>
