--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -3,7 +3,9 @@
 
         <mat-toolbar class="toolbar " fxLayoutAlign="space-between center">
             <!-- <mat-icon>insert_drive_file</mat-icon>  -->
+           <div style="font-family: roboto;">
             BI Project: {{projectname}}
+           </div> 
           
                 <mat-icon *ngIf="isUserLogged" (click)="openDialog('displayInfo', '')" 
                 style="color: white;background-color: #004684;  outline: none;" >help</mat-icon>
@@ -82,8 +84,8 @@
             <div *ngIf="isUserLogged" fxLayout="column" fxLayoutAlign="center center" id="login">
 
                 <br>
-                <div class="mat-subheading-1">Suggestions</div>
-                <mat-card style="height: 250px;overflow-y: scroll;min-width: 330px;">
+                <div class="mat-subheading-1">Suggestions: {{newNames.length}}</div>
+                <mat-card class="names-list-card">
 
                     <div *ngFor="let item of  newNames" style="font-size: 20px;" (click)="openDialog(item.name, item.nameid)" >{{item.name}}</div>
                 </mat-card>
