--- a/src/assets/fonts/hackers.scss
+++ b/src/assets/fonts/hackers.scss
@@ -31,3 +31,7 @@
     font-family: fire;
     src: url("fire.ttf") format("truetype");
 }
+@font-face {
+    font-family: roboto;
+    src: url("fire.ttf") format("truetype");
+}
