css animations tune up app

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -94,7 +94,7 @@
                 <form name="newNameForm" [formGroup]="newNameForm" novalidate class="nameform"
                     style="text-align: center;">
 
-                    <mat-form-field appearance="outline" style="min-width: 330px;">
+                    <mat-form-field class="name-input-field" appearance="outline" style="min-width: 330px;">
                         <mat-label>Name Suggestions</mat-label>
                         <input matInput type="name" placeholder="name" autofocus #reference formControlName="name">
                     </mat-form-field>
